--- a/viz/index.html
+++ b/viz/index.html
@@ -1,70 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>
-<script src="https://dagrejs.github.io/project/dagre-d3/latest/dagre-d3.min.js"></script>
-<style>
-html {
-	background-color: #111111;
-}
-body {
-  /*width: 100vw;*/
-  height: 100vh;
-}
-text {
-  font-weight: 300;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-}
-.node rect {
-	stroke: #999;
-	fill: #fff;
-	stroke-width: 1.5px;
-}
-.edgePath path {
-  stroke: #777;
-  stroke-width: 1.5px;
-}
-svg {
-  width: 100%;
-  height: 100%;
-}
-</style>
+  <meta charset="utf-8">
+  <title>tinygrad viz</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"></script>
+  <script src="https://dagrejs.github.io/project/dagre-d3/latest/dagre-d3.min.js"></script>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<svg>
-<g id="render">
-</g>
-</svg>
-
-<script>
-var currentUOps = 0
-async function main() {
-  const ret = await (await fetch("/"+currentUOps)).json()
-  //console.log(ret)
-  const g = new dagreD3.graphlib.Graph().setGraph({}).setDefaultEdgeLabel(function() { return {}; });
-
-  for ([k,v] of Object.entries(ret)) {
-    //g.setNode(k, {label: v[0]+"\n"+v[3], style: "fill: "+v[4]})
-    g.setNode(k, {label: v[0], style: "fill: "+v[4]})
-    for (parent of v[2]) {
-      g.setEdge(parent, k)
-    }
-  }
-
-  const render = new dagreD3.render();
-  render(d3.select("svg g"), g);
-}
-document.addEventListener("keydown", async function(event) {
-  if (event.key == 'ArrowLeft') {
-    currentUOps = Math.max(0, currentUOps-1)
-    main()
-  }
-  if (event.key == 'ArrowRight') {
-    currentUOps += 1
-    main()
-  }
-})
-main()
-</script>
-
+  <svg>
+    <g id="render">
+  </g>
+  </svg>
+  <script src="index.js"></script>
+</body>
+</html>
